fix z-index issue with mobile menu

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
-  z-index: 2;
+  z-index: 10;
 }
 
 .burger {
@@ -61,6 +61,7 @@ body {
   align-items: center;
   opacity: 0;
   transition: 0.2s;
+  z-index: 5;
 }
 
 .mobile--menu {
@@ -70,6 +71,7 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  z-index: 5;
 }
 
 .mobile--menu span {
